--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -18,6 +18,8 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # Add this to grant the necessary push permission
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -37,13 +39,7 @@ jobs:
      # show the status of the build. Makes it easier for debugging (if there's any issues).
       - run: git status
 
-      # Push the changes
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          force: true
+
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
