--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,49 +1,49 @@
 # GitHub Action for generating a contribution graph with a snake eating your contributions.
-
 name: Generate Snake
 
 # Controls when the action will run. This action runs every 6 hours.
-
 on:
   schedule:
       # every 6 hours
     - cron: "0 */6 * * *"
-
-# This command allows us to run the Action automatically from the Actions tab.
+  # This command allows us to run the Action manually from the Actions tab.
   workflow_dispatch:
 
 # The sequence of runs in this workflow:
 jobs:
-  # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    
+    # CRITICAL: Grant the token write permission for pushing to the 'output' branch
     permissions:
-      contents: write # Add this to grant the necessary push permission
+      contents: write 
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
 
-    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
+      # Checks out the repository code
       - uses: actions/checkout@v2
 
-    # Generates the snake  
+      # Generates the snake GIF and SVG files
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: ShivHanda
-          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
+          # Make sure this is your correct GitHub username
+          github_user_name: ShivHanda 
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
+        # CRITICAL: Pass the GITHUB_TOKEN to authenticate API calls and get the full contribution data
+        env: 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-     # show the status of the build. Makes it easier for debugging (if there's any issues).
+      # Shows the status of the files created in the 'dist' directory
       - run: git status
 
-
-
+      # This action handles committing and pushing the files in the 'dist' directory 
+      # to the designated 'output' branch.
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          # the output branch we mentioned above
+          # The output branch for the files (e.g., 'output' or 'gh-pages')
           target_branch: output
           build_dir: dist
         env:
