--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,50 +1,54 @@
-# GitHub Action for generating a contribution graph with a snake eating your contributions.
-name: Generate Snake
+# -----------------------------------------------------------
+# FINAL VERSION: Snake Animation Workflow
+# Optimized for Full Contribution Graph Retrieval (uses svg-only)
+# -----------------------------------------------------------
 
-# Controls when the action will run. This action runs every 6 hours.
+name: Generate Snake Contribution
+
 on:
   schedule:
-      # every 6 hours
+      # Runs every 6 hours
     - cron: "0 */6 * * *"
-  # This command allows us to run the Action manually from the Actions tab.
+  # Allows manual triggering from the Actions tab
   workflow_dispatch:
 
-# The sequence of runs in this workflow:
 jobs:
-  build:
-    # The type of runner that the job will run on
+  generate:
     runs-on: ubuntu-latest
     
-    # CRITICAL: Grant the token write permission for pushing to the 'output' branch
+    # CRITICAL: Grant the token write permission for pushing the generated file
     permissions:
       contents: write 
 
     steps:
 
-      # Checks out the repository code
-      - uses: actions/checkout@v2
+      # Step 1: Checks out the repository code
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      # Generates the snake GIF and SVG files
-      - uses: Platane/snk@master
-        id: snake-gif
+      # Step 2: Generate snake.svg using the svg-only action (better data retrieval)
+      - name: Generate snake.svg
+        # Using the svg-only variant which you noted retrieved more data initially
+        uses: Platane/snk/svg-only@v3
         with:
-          # Make sure this is your correct GitHub username
-          github_user_name: ShivHanda 
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
-        # CRITICAL: Pass the GITHUB_TOKEN to authenticate API calls and get the full contribution data
+          # Your GitHub username
+          github_user_name: ShivHanda
+          # Define the output path and set the palette (optional, remove for testing)
+          outputs: dist/github-contribution-grid-snake.svg?palette=github-dark
+        
+        # CRITICAL: Pass the GITHUB_TOKEN here to authenticate the API call 
+        # to retrieve the full, accurate 365-day contribution history.
         env: 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Shows the status of the files created in the 'dist' directory
-      - run: git status
-
-      # This action handles committing and pushing the files in the 'dist' directory 
-      # to the designated 'output' branch.
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+      # Step 3: Push the generated SVG file to the dedicated 'output' branch
+      - name: Push snake.svg to output branch
+        # This action handles committing and pushing the files in the 'dist' directory
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          # The output branch for the files (e.g., 'output' or 'gh-pages')
+          # The output branch to store the generated file
           target_branch: output
+          # The directory containing the generated file
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
